--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@storybook/addon-storyshots": "^6.1.18",
     "@storybook/node-logger": "^6.1.18",
     "@storybook/preset-create-react-app": "^3.1.6",
-    "@storybook/react": "^6.1.18"
+    "@storybook/react": "^6.1.18",
+    "chromatic": "^5.6.3"
   }
 }
