--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "@storybook/addon-essentials": "^6.1.18",
     "@storybook/addon-links": "^6.1.18",
     "@storybook/addon-storyshots": "^6.1.18",
+    "@storybook/addon-storyshots-puppeteer": "^6.1.18",
     "@storybook/node-logger": "^6.1.18",
     "@storybook/preset-create-react-app": "^3.1.6",
     "@storybook/react": "^6.1.18",
-    "chromatic": "^5.6.3"
+    "chromatic": "^5.6.3",
+    "puppeteer": "^7.1.0"
   }
 }
