--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@storybook/preset-create-react-app": "^3.1.6",
     "@storybook/react": "^6.1.18",
     "chromatic": "^5.6.3",
+    "eslint": "^7.20.0",
     "puppeteer": "^7.1.0"
   }
 }
