--- a/package.json
+++ b/package.json
@@ -47,17 +47,18 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.1.18",
-    "@storybook/addon-essentials": "^6.1.18",
+    "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.18",
-    "@storybook/addon-storyshots": "^6.1.18",
+    "@storybook/addon-storyshots": "^6.1.21",
     "@storybook/addon-storyshots-puppeteer": "^6.1.18",
     "@storybook/node-logger": "^6.1.18",
     "@storybook/preset-create-react-app": "^3.1.6",
-    "@storybook/react": "^6.1.18",
+    "@storybook/react": "^6.1.21",
     "chromatic": "^5.6.3",
     "eslint": "^7.20.0",
     "eslint-plugin-jest-dom": "^3.6.5",
     "eslint-plugin-testing-library": "^3.10.1",
-    "puppeteer": "^7.1.0"
+    "puppeteer": "^7.1.0",
+    "typescript": "^4.2.3"
   }
 }
