--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@emotion/babel-preset-css-prop": "^11.0.0",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.21",
     "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.16",
     "react": "^17.0.1",
