--- a/package.json
+++ b/package.json
@@ -63,6 +63,6 @@
     "eslint-plugin-jest-dom": "^3.6.5",
     "eslint-plugin-testing-library": "^3.10.1",
     "puppeteer": "^7.1.0",
-    "typescript": "^4.2.3"
+    "typescript": "~4.1.0"
   }
 }
