--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "lint": "yarn eslint src/"
+    "lint": "yarn eslint src/",
+    "lint:css": "stylelint './src/**/*.ts' './src/**/*.tsx'"
   },
   "eslintConfig": {
     "extends": [
@@ -63,6 +64,11 @@
     "eslint-plugin-jest-dom": "^3.6.5",
     "eslint-plugin-testing-library": "^3.10.1",
     "puppeteer": "^7.1.0",
+    "stylelint": "^13.12.0",
+    "stylelint-config-airbnb": "0.0.0",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.19.0",
     "typescript": "~4.1.0"
   }
 }
