--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "storybook-addon-root-attribute": "^1.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -52,13 +53,13 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.1.18",
-    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-essentials": "^6.3.7",
     "@storybook/addon-links": "^6.1.18",
-    "@storybook/addon-storyshots": "^6.1.21",
+    "@storybook/addon-storyshots": "^6.3.7",
     "@storybook/addon-storyshots-puppeteer": "^6.1.18",
     "@storybook/node-logger": "^6.1.18",
     "@storybook/preset-create-react-app": "^3.1.6",
-    "@storybook/react": "^6.1.21",
+    "@storybook/react": "^6.3.7",
     "chromatic": "^5.6.3",
     "eslint": "^7.20.0",
     "eslint-plugin-jest-dom": "^3.6.5",
