--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@types/jest": "^26.0.21",
     "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.16",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "storybook-addon-root-attribute": "^1.0.2",
-    "web-vitals": "^0.2.4",
-    "gh-pages": "^3.2.3"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
