--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@storybook/preset-create-react-app": "^3.1.6",
     "@storybook/react": "^6.3.7",
     "chromatic": "^5.6.3",
+    "cypress": "^8.3.0",
     "eslint": "^7.20.0",
     "eslint-plugin-jest-dom": "^3.6.5",
     "eslint-plugin-testing-library": "^3.10.1",
