--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,10 @@
 .env.test.local
 .env.production.local
 
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .eslintcache
 /storybook-static
+build-storybook.log
