--- a/package.json
+++ b/package.json
@@ -4,24 +4,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/babel-preset-css-prop": "^11.0.0",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@reduxjs/toolkit": "^1.5.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.21",
-    "@types/react-dom": "^17.0.2",
-    "@types/react-redux": "^7.1.16",
-    "gh-pages": "^3.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
-    "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "storybook-addon-root-attribute": "^1.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -58,26 +48,34 @@
     ]
   },
   "devDependencies": {
+    "@storybook/preset-create-react-app": "^1.2.0",
     "@storybook/addon-actions": "^6.1.18",
-    "@storybook/addon-essentials": "^6.3.7",
+    "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.18",
-    "@storybook/addon-storyshots": "^6.3.7",
-    "@storybook/addon-storyshots-puppeteer": "^6.1.18",
+    "@storybook/addon-storyshots": "^6.1.21",
+    "@storybook/addon-storyshots-puppeteer": "^6.3.7",
     "@storybook/node-logger": "^6.1.18",
-    "@storybook/preset-create-react-app": "^3.1.6",
-    "@storybook/react": "^6.3.7",
+    "@storybook/react": "^6.1.21",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.21",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-redux": "^7.1.16",
+    "@types/storybook__react": "^5.2.1",
     "chromatic": "^5.6.3",
     "cypress": "^8.3.0",
     "eslint": "^7.20.0",
     "eslint-plugin-jest-dom": "^3.6.5",
     "eslint-plugin-testing-library": "^3.10.1",
     "gh-pages": "^3.2.3",
-    "puppeteer": "^7.1.0",
     "stylelint": "^13.12.0",
     "stylelint-config-airbnb": "0.0.0",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.19.0",
-    "typescript": "~4.1.0"
+    "typescript": "~4.1.0",
+    "babel-loader": "8.1.0",
+    "trim": "^0.0.3"
   }
 }
