--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
     ]
   },
   "devDependencies": {
-    "@storybook/preset-create-react-app": "^1.2.0",
     "@storybook/addon-actions": "^6.1.18",
     "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.18",
     "@storybook/addon-storyshots": "^6.1.21",
     "@storybook/addon-storyshots-puppeteer": "^6.3.7",
     "@storybook/node-logger": "^6.1.18",
+    "@storybook/preset-create-react-app": "^1.2.0",
     "@storybook/react": "^6.1.21",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -63,6 +63,8 @@
     "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.16",
     "@types/storybook__react": "^5.2.1",
+    "@types/uuid": "^8.3.4",
+    "babel-loader": "8.1.0",
     "chromatic": "^5.6.3",
     "cypress": "^8.3.0",
     "eslint": "^7.20.0",
@@ -70,11 +72,10 @@
     "eslint-plugin-testing-library": "^3.10.1",
     "gh-pages": "^3.2.3",
     "stylelint": "^13.12.0",
+    "stylelint-config-standard": "^21.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.19.0",
-    "stylelint-config-standard": "^21.0.0",
-    "typescript": "~4.1.0",
-    "babel-loader": "8.1.0",
-    "trim": "^0.0.3"
+    "trim": "^0.0.3",
+    "typescript": "~4.1.0"
   }
 }
